fixed overflow carrusel blogs

--- a/style.css
+++ b/style.css
@@ -245,7 +245,6 @@ body {
   background-color: var(--color-light);
   padding: 2rem;
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
